# FlexDNS

./: Cargo.toml  README.MD
src/: main.rs
src/cache/: mod.rs  ttl_cache.rs
src/config/: listener.rs  load.rs  mod.rs  upstream.rs
src/core/: mod.rs  watcher.rs
src/dhbc/: append_dhcp.rs  detector.rs  mod.rs
src/dns/: dnsquery.rs  mod.rs  parse.rs
src/dns/client/: doh.rs  dot.rs  mod.rs  tcp.rs  udp.rs
src/server/: mod.rs  parse.rs  spawn.rs  tcp.rs  udp.rs
systemd/: flexDNS.service
