[package]
name = "flexDNS"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
tokio-rustls = "0.25"
rustls = "0.23"
webpki-roots = "0.26"
bytes = "1"
notify = { version = "6", default-features = false }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
toml = "0.8"
anyhow = "1.0.102"
arc-swap = "1.8.2"
dashmap = "6.1.0"
zbus = "5.14.0"
serde_json = "1.0.149"
tokio-util = "0.7.18"
base64 = "0.22.1"
nlink = "0.9.0"
tokio-stream = "0.1.18"
hex = "0.4.3"
